BT108 Adding tank static mesh, adding landscape, adding material to paint landscape, adding camera to view around player tank pawn

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-BattleTank/Content/BattleGround_BuiltData.uasset
+Chris-Folea-MountainRange3.png
+tank.fbx_Barrel.fbx
+tank.fbx_Body.fbx
+tank.fbx_Track.fbx
+tank.fbx_Turret.fbx
