BT126 Tank now delegates the aiming to the Tank Aiming component.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ tank.fbx_Track.fbx
 tank.fbx_Turret.fbx
 BT17-Firing-M1A1-tank-in-Djibouti.jpg
 *.umap
+BattleTank/ipch/BATTLETANK-9ac3cd30/BATTLETANK-58417c73.ipch
